--- a/index.html
+++ b/index.html
@@ -11,15 +11,11 @@
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/41e196d463.js" crossorigin="anonymous"></script>
     <script src="https://cdn.tailwindcss.com"></script>
-
-
-    <!--Apex charts-->
-    <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
 </head>
 
 <body>
     <!-- bg-[#FFFCF8] -->
-    <main class="w-full bg-blue-200 min-h-screen flex">
+    <main class="w-full bg-[#FFFCF8] min-h-screen flex">
 
 
         <!-- left bar -->
@@ -173,8 +169,8 @@
                 </div>
 
 
-                <div class="pr-10 mt-6 -pl-8">
-                    <canvas id="activity"></canvas>
+                <div class="pr-10 mt-6">
+                    <canvas id="activity" width="400" height="150"></canvas>
                 </div>
             </div>
 
@@ -200,15 +196,16 @@
 
 
         <!-- right bar -->
+        <!-- bg-[#303030] -->
         <section class="w-full p-10 bg-[#303030] rounded-3xl">
             <div class="flex items-center justify-between">
-                <h3 class="text-white">BMI Calculator</h3>
+                <h3 class="text-white text-2xl">BMI Calculator</h3>
 
                 <div class="relative">
                     <button id="bmiSelectionButton"
-                        class="bg-white py-4 px-6 rounded-2xl border border-gray-300 focus:outline-none flex items-center justify-between ">
-                        <span id="selectedOption">Jan 2021</span>
-                        <svg class="w-4 h-4 ml-2" fill="none" stroke="currentColor" viewBox="0 0 24 24"
+                        class="bg-[#303030] py-4 px-6 rounded-2xl border border-[#CACACA] focus:outline-none flex items-center justify-between ">
+                        <span id="selectedOption" class="text-white">Last Week</span>
+                        <svg class="w-4 h-4 ml-2 text-white" fill="none" stroke="currentColor" viewBox="0 0 24 24"
                             xmlns="http://www.w3.org/2000/svg">
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7">
                             </path>
@@ -216,22 +213,151 @@
                     </button>
 
 
-                    <div id="selectionMenu"
+                    <div id="bmiSelectionMenu"
                         class="absolute mt-2 w-36 text-center bg-white border border-gray-200 rounded shadow-lg hidden">
-                        <a href="#" class="block px-4 py-2 text-gray-700 hover:bg-gray-100" data-value="Jan 2021">Jan
-                            2021</a>
-                        <a href="#" class="block px-4 py-2 text-gray-700 hover:bg-gray-100" data-value="Feb 2021">Feb
-                            2021</a>
-                        <a href="#" class="block px-4 py-2 text-gray-700 hover:bg-gray-100" data-value="Mar 2021">Mar
-                            2021</a>
+                        <a href="#" class="block px-4 py-2 text-gray-700 hover:bg-gray-100"
+                            data-value="First Week">First Week</a>
+                        <a href="#" class="block px-4 py-2 text-gray-700 hover:bg-gray-100"
+                            data-value="Second Week">Second Week</a>
+                        <a href="#" class="block px-4 py-2 text-gray-700 hover:bg-gray-100"
+                            data-value="Third Week">Third Week</a>
+                        <a href="#" class="block px-4 py-2 text-gray-700 hover:bg-gray-100" data-value="Last Week">Last
+                            Week</a>
                     </div>
                 </div>
             </div>
 
 
 
+            <div class="flex gap-6 mt-10">
+                <div class="flex flex-col gap-4">
+                    <div class="bg-[#F8DEBD] p-4 w-48 h-20 rounded-2xl">
+                        <div class="flex justify-end">
+                            <img src="./images/cal.png" alt="">
+                        </div>
+                        <div class="flex gap-6 mt-1">
+                            <h3>Height</h3>
+                            <h3>170 cm</h3>
+                        </div>
+                    </div>
+
+
+                    <div class="bg-[#D0FBFF] p-4 w-48 h-20 rounded-2xl">
+                        <div class="flex justify-end">
+                            <img src="./images/cal.png" alt="">
+                        </div>
+                        <div class="flex gap-6 mt-1">
+                            <h3>Weight</h3>
+                            <h3>72 kg</h3>
+                        </div>
+                    </div>
+                </div>
+                <div class="bg-[#4A4949] w-full p-4 rounded-2xl">
+                    <h3 class="text-white text-lg">Body Mass Index (BMI)</h3>
+
+                    <div class="flex justify-between items-center mt-2">
+                        <h3 class="text-white text-3xl">24.9</h3>
+                        <button class="px-3 py-1 rounded-md bg-[#D6FFDD]">You're Healthy</button>
+                    </div>
+
+                    <div class="mt-2">
+                        <canvas id="myHorizontalChart" width="400" height="50"></canvas>
+                    </div>
+                </div>
+            </div>
+
+
+
+            <div class="border opacity-15 mt-24"></div>
+
+
+
+            <div class="flex justify-between mt-24">
+                <div>
+                    <h3 class="text-white text-3xl">Body Measurements</h3>
+                    <p class="text-[#CACACA] mt-4">Last checked 2 Days Ago</p>
+                    <button class="text-white bg-[#5E5E5E] p-2 rounded-md mt-4">Inverted Triangle Body Shape</button>
+
+
+                    <div class="flex flex-col gap-4 mt-28">
+                        <div class="bg-white p-6 rounded-lg w-32">
+                            <p>Chest (in)</p>
+                            <div class="flex items-center justify-between">
+                                <h3 class="text-2xl">44.5</h3>
+                                <i class="fa-solid fa-arrow-up text-xl text-[#E95D5C]"></i>
+                            </div>
+                        </div>
+
+                        <div class="bg-white p-6 rounded-lg w-32">
+                            <p>Waist (in)</p>
+                            <div class="flex items-center justify-between">
+                                <h3 class="text-2xl">34</h3>
+                                <i class="fa-solid fa-arrow-down text-xl text-[#90DF9E]"></i>
+                            </div>
+                        </div>
+
+                        <div class="bg-white p-6 rounded-lg w-32">
+                            <p>Hip (in)</p>
+                            <div class="flex items-center justify-between">
+                                <h3 class="text-2xl">42.5</h3>
+                                <i class="fa-solid fa-arrow-down text-xl text-[#90DF9E]"></i>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div>
+                    <img class="h-full" src="./images/man.png" alt="">
+                </div>
+            </div>
+
+
+
+
+
         </section>
+
+
+
+
+
     </main>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -261,27 +387,27 @@
         });
     </script>
 
-    
+
     <script>
 
-        document.getElementById('selectionButton').addEventListener('click', function () {
-            var menu = document.getElementById('selectionMenu');
+        document.getElementById('bmiSelectionButton').addEventListener('click', function () {
+            var menu = document.getElementById('bmiSelectionMenu');
             menu.classList.toggle('hidden');
         });
 
 
-        document.querySelectorAll('#selectionMenu a').forEach(option => {
+        document.querySelectorAll('#bmiSelectionMenu a').forEach(option => {
             option.addEventListener('click', function () {
                 var selectedValue = this.getAttribute('data-value');
                 document.getElementById('selectedOption').innerText = selectedValue;
-                document.getElementById('selectionMenu').classList.add('hidden');
+                document.getElementById('bmiSelectionMenu').classList.add('hidden');
             });
         });
 
 
         window.addEventListener('click', function (event) {
-            var menu = document.getElementById('selectionMenu');
-            var button = document.getElementById('selectionButton');
+            var menu = document.getElementById('bmiSelectionMenu');
+            var button = document.getElementById('bmiSelectionButton');
             if (!menu.contains(event.target) && !button.contains(event.target)) {
                 menu.classList.add('hidden');
             }
@@ -508,7 +634,7 @@
                     },
                     {
                         label: '   Meditation',
-                        data: [5, 10, 15, 20, 25, 5, 10, 15, 22, 15, 5, 10, 15, 12, 14, 5, 10, 15, 17],
+                        data: [20, 15, 15, 20, 25, 25, 10, 15, 22, 15, 35, 10, 15, 12, 14, 12, 10, 15, 17],
                         backgroundColor: 'rgb(208,135,38) ',
                         borderColor: 'transparent',
                         borderWidth: 5,
@@ -527,7 +653,7 @@
             const options = {
                 layout: {
                     padding: {
-                        left: 50
+                        left: 30
                     }
                 },
                 plugins: {
@@ -622,6 +748,142 @@
         });
 
     </script>
+
+
+    <script>
+        document.addEventListener('DOMContentLoaded', (event) => {
+            const ctx = document.getElementById('myHorizontalChart').getContext('2d');
+
+
+            var gradientFill = ctx.createLinearGradient(100, 0, 500, 0);
+            gradientFill.addColorStop(0, "rgb(178,213,240)");
+            gradientFill.addColorStop(0.3, "rgb(133,227,220)");
+            gradientFill.addColorStop(0.5, "rgb(212,214,148)");
+            gradientFill.addColorStop(1, "rgb(237,89,61)");
+
+
+
+            const data = {
+                labels: [''],
+                datasets: [
+                    {
+                        label: 'BMI',
+                        data: [9.9],
+                        type: 'scatter',
+                        pointBackgroundColor: 'rgba(255, 99, 132, 1)',
+                        pointBorderColor: 'rgba(255, 99, 132, 1)',
+                        pointRadius: 5,
+                        pointHoverRadius: 7,
+                        showLine: false
+                    },
+                    {
+                        label: '',
+                        data: [25],
+                        type: 'bar',
+                        backgroundColor: gradientFill,
+                        borderColor: 'rgba(54, 162, 235, 1)',
+                        borderColor: 'transparent',
+                        borderWidth: 5,
+                        borderRadius: 10,
+                        borderSkipped: false,
+                        barThickness: 20,
+                    }
+                ]
+            };
+
+            const options = {
+                indexAxis: 'y', // This makes the chart horizontal
+                plugins: {
+                    tooltip: {
+                        callbacks: {
+                            // Disable tooltip for Dataset 2
+                            label: function (tooltipItem) {
+                                const datasetIndex = tooltipItem.datasetIndex;
+                                if (datasetIndex === 1) { // Dataset 2 index
+                                    return null; // Do not show tooltip
+                                }
+                                return tooltipItem.dataset.label + ': ' + tooltipItem.raw;
+                            }
+                        }
+                    },
+                    title: {
+                        display: false,
+                        text: ''
+                    },
+                    legend: {
+                        display: false
+                    }
+
+                },
+                responsive: true,
+                scales: {
+                    x: {
+                        border: {
+                            display: false
+                        },
+                        grid: {
+                            display: false,
+                            drawBorder: false
+                        },
+                        beginAtZero: false,
+                        min: 0,
+                        max: 25,
+                        categoryPercentage: 10,
+                        barPercentage: 10,
+                        ticks: {
+                            callback: function (value) {
+                                if (value === 0) {
+                                    return '15';
+                                }
+                                else if (value === 5) {
+                                    return '18.5';
+                                }
+                                else if (value === 10) {
+                                    return '25';
+                                }
+                                else if (value === 15) {
+                                    return '30';
+                                }
+                                else if (value === 25) {
+                                    return '40';
+                                }
+
+                                else return '';
+                            },
+                            color: 'white',
+                            font: {
+                                size: 16
+                            }
+                        },
+                    },
+                    y: {
+                        border: {
+                            display: false
+                        },
+                        grid: {
+                            display: false,
+                            drawBorder: false
+                        },
+
+                        ticks: {
+                            display: false,
+                            offset: false,
+                            color: 'white'
+                        }
+                    }
+                }
+            };
+
+            const myHorizontalChart = new Chart(ctx, {
+                type: 'bar',
+                data: data,
+                options: options
+            });
+        });
+
+    </script>
+
+
 </body>
 
 </html>
