--- a/index.html
+++ b/index.html
@@ -14,12 +14,17 @@
 </head>
 
 <body>
-    <!-- bg-[#FFFCF8] -->
-    <main class="w-full bg-[#FFFCF8] min-h-screen flex">
 
+
+
+
+
+
+    <!-- bg-[#FFFCF8] flex flex-col md:flex-row-->
+    <main class="w-full bg-[#FFFCF8] min-h-screen flex flex-col xl:flex-row">
 
         <!-- left bar -->
-        <section class="relative text-black bg-white p-2">
+        <!-- <section class="relative text-black bg-white p-2">
             <div>
                 <div class="w-[100px] flex justify-center mt-14">
                     <img src="./images/logo.png" alt="" />
@@ -42,7 +47,14 @@
                                 class="fa-solid fa-arrow-right-from-bracket text-[#707070]"></i></a></li>
                 </ul>
             </div>
-        </section>
+        </section> -->
+
+
+
+
+
+
+
 
 
 
@@ -51,7 +63,7 @@
 
         <!-- main body -->
         <!-- w-[50%] -->
-        <section class="p-10 rounded-l-2xl">
+        <section class="p-6 xl:p-10 rounded-l-2xl">
             <div class="flex justify-center">
                 <div class="space-y-3 w-full">
                     <h1 class="text-4xl font-semibold">Health Overview</h1>
@@ -74,9 +86,9 @@
 
 
             <!-- chart section -->
-            <div class="flex gap-8 mt-10">
+            <div class="flex flex-col md:flex-row gap-8 mt-10">
                 <!-- chart 1 -->
-                <div class="bg-white p-6 rounded-2xl w-72 h-80">
+                <div class="bg-white p-4 xl:p-6 rounded-2xl w-full md:w-56 lg:w-72 xl:w-72 h-72 md:h-64 xl:h-80">
                     <div class="flex items-center gap-4">
                         <!-- <i class="fa-solid fa-droplet p-8 rounded-2xl bg-[#F8DEBD]"></i> -->
                         <div class="px-6 py-4 rounded-2xl bg-[#F8DEBD] h-22">
@@ -96,7 +108,7 @@
                 </div>
 
                 <!-- chart 2 -->
-                <div class="bg-white p-6 rounded-2xl w-72 h-80">
+                <div class="bg-white p-4 xl:p-6 rounded-2xl w-full md:w-56 lg:w-72 xl:w-72 h-72 md:h-64 xl:h-80">
                     <div class="flex items-center gap-4">
                         <!-- <i class="fa-solid fa-droplet p-8 rounded-2xl bg-[#F8DEBD]"></i> -->
                         <div class="px-4 py-4 rounded-2xl bg-[#FBF0F3] h-22">
@@ -116,7 +128,7 @@
                 </div>
 
                 <!-- chart 3 -->
-                <div class="bg-white p-6 rounded-2xl w-72 h-80">
+                <div class="bg-white p-4 xl:p-6 rounded-2xl w-full md:w-56 lg:w-72 xl:w-72 h-72 md:h-64 xl:h-80">
                     <div class="flex items-center gap-4">
                         <!-- <i class="fa-solid fa-droplet p-8 rounded-2xl bg-[#F8DEBD]"></i> -->
                         <div class="px-3 py-3 rounded-2xl bg-[#D0FBFF] h-22">
@@ -138,7 +150,7 @@
 
 
 
-            <div class="bg-white rounded-2xl mt-10 pb-6">
+            <div class="bg-white rounded-2xl mt-10 md:pb-6">
 
                 <div class="flex items-center justify-between p-6">
                     <h3 class="text-xl font-medium">Activity Growth</h3>
@@ -170,7 +182,7 @@
 
 
                 <div class="pr-10 mt-6">
-                    <canvas id="activity" width="400" height="150"></canvas>
+                    <canvas class="activity-chart" id="activity" width="400" height="150"></canvas>
                 </div>
             </div>
 
@@ -181,9 +193,9 @@
 
 
 
-            <div class="bg-white mt-10 p-10 rounded-2xl">
-                <div class="flex items-center justify-between">
-                    <h3 class="text-xl font-medium">Upcoming Appointment</h3>
+            <div class="bg-white mt-10 p-6 md:p-10 rounded-2xl">
+                <div class="flex flex-col md:flex-row items-center justify-center md:justify-between gap-2 md:gap-0">
+                    <h3 class="text-xl text-center font-medium">Upcoming Appointment</h3>
                     <button class="px-4 py-2 rounded-lg bg-[#D0FBFF]">August 14, 2021</button>
                     <p class="text-[#383838]">Consultation with Dr. James</p>
                 </div>
@@ -197,7 +209,7 @@
 
         <!-- right bar -->
         <!-- bg-[#303030] -->
-        <section class="w-full p-10 bg-[#303030] rounded-3xl">
+        <section class="w-full p-6 md:p-10 bg-[#303030] rounded-3xl">
             <div class="flex items-center justify-between">
                 <h3 class="text-white text-2xl">BMI Calculator</h3>
 
@@ -229,24 +241,24 @@
 
 
 
-            <div class="flex gap-6 mt-10">
-                <div class="flex flex-col gap-4">
-                    <div class="bg-[#F8DEBD] p-4 w-48 h-20 rounded-2xl">
+            <div class="flex flex-col md:flex-col xl:flex-row gap-6 mt-10">
+                <div class="flex md:flex-row xl:flex-col gap-4">
+                    <div class="bg-[#F8DEBD] p-4 w-48 md:w-full h-20 xl:h-24 rounded-2xl">
                         <div class="flex justify-end">
                             <img src="./images/cal.png" alt="">
                         </div>
-                        <div class="flex gap-6 mt-1">
+                        <div class="flex justify-between mt-1">
                             <h3>Height</h3>
                             <h3>170 cm</h3>
                         </div>
                     </div>
 
 
-                    <div class="bg-[#D0FBFF] p-4 w-48 h-20 rounded-2xl">
+                    <div class="bg-[#D0FBFF] p-4 w-48 md:w-full xl:w-48 h-20 xl:h-24 rounded-2xl">
                         <div class="flex justify-end">
                             <img src="./images/cal.png" alt="">
                         </div>
-                        <div class="flex gap-6 mt-1">
+                        <div class="flex justify-between mt-1">
                             <h3>Weight</h3>
                             <h3>72 kg</h3>
                         </div>
@@ -261,7 +273,7 @@
                     </div>
 
                     <div class="mt-2">
-                        <canvas id="myHorizontalChart" width="400" height="50"></canvas>
+                        <canvas id="myHorizontalChart" width="400" height="68"></canvas>
                     </div>
                 </div>
             </div>
@@ -276,7 +288,8 @@
                 <div>
                     <h3 class="text-white text-3xl">Body Measurements</h3>
                     <p class="text-[#CACACA] mt-4">Last checked 2 Days Ago</p>
-                    <button class="text-white bg-[#5E5E5E] p-2 rounded-md mt-4">Inverted Triangle Body Shape</button>
+                    <button class="text-white bg-[#5E5E5E] p-2 rounded-md mt-4">Inverted Triangle Body
+                        Shape</button>
 
 
                     <div class="flex flex-col gap-4 mt-28">
@@ -321,19 +334,6 @@
 
 
     </main>
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
